2021-02-08 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/SDCCpeeph.c: fix function names in error messages

2021-02-08 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/makebin/makebin.c: add patch #360

2021-02-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCattr.c: fix include filename
	* ChangeLog: it's no longer 2020

2021-02-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Make end-of-call stack adjustment tolerate return value in a.

2021-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Separate __z88dk_fastcall registers from return value registers.

2021-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in code generation for wide unary minus with upper operand word in hl.

2021-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Refactor handling of return value registers.

2021-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Fix printing of function with variable arguments (e.g. for debug dumps).
	* src/z80/gen.c,
	  src/stm8/gen.c:
	  Refactor register asmop intialization.

2021-02-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCattr.h,
	  src/SDCCattr.c,
	  src/SDCC.y,
	  src/SDCCsymt.h,
	  src/Makefile.in:
	  Infrastructure for attributes.

2021-02-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Fix bug #3174.

2021-01-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix bug #3173.
	* src/z80/peeph.def:
	  Split rule for add from adc, sbc rule due to differences in flag handling.

2021-01-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Pick some improvements from patch #362 by Visenri.
	* support/regression/tests/bug-3172.c:
	  Test for bug #3172.
	* device/lib/_strcpy.c:
	  Pick a fix from noasm2 branch.

2021-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Pick some improvements from patch #362 by Visenri.
